# mcp-poc

./: README.md  pyproject.toml  start_dev.sh
backend/: __init__.py  main.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: ChatInterface.tsx
mcp_agents/: __init__.py  handler_agent.py
mcp_server/: __init__.py  multi_tool_mcp_server.py
